kubernetes/services/nextcloud.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: nextcloud

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirect
  namespace: default
spec:
  redirectRegex:
    permanent: true
    regex: "https://(.*)/.well-known/(?:card|cal)dav"
    replacement: "https://${1}/remote.php/dav"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-nextcloud-redirect@kubernetescrd
spec:
  tls:
    - hosts:
        - nextcloud.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: nextcloud.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: default
  labels:
    app: nextcloud
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: nextcloud:28
          # https://github.com/nextcloud/helm/issues/55#issuecomment-1126289717
          lifecycle:
            postStart:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - "start-stop-daemon --start --make-pidfile --remove-pidfile --background --pidfile /cron.pid --exec /cron.sh"
          startupProbe:
            exec:
              command: 
              - curl
              - -sSf
              - http://localhost/status.php
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: 2000m
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: data
              mountPath: /var/www/html/data
      volumes:
        - name: app
          hostPath:
            path: /storage/nextcloud/app
        - name: data
          hostPath:
            path: /storage/nextcloud/data
